[gd_scene load_steps=28 format=3 uid="uid://cqt1hm1g1ueh4"]

[ext_resource type="Script" uid="uid://j5qorhtv8mn0" path="res://Theme/StartScreen/start_screen.gd" id="1_vdfby"]
[ext_resource type="Texture2D" uid="uid://cqt3nwni330iq" path="res://Theme/StartScreen/snakeAnimated.png" id="2_4x1nq"]
[ext_resource type="AudioStream" uid="uid://shdfn4nt75xg" path="res://audio/item.mp3" id="3_4x1nq"]
[ext_resource type="AudioStream" uid="uid://c1jbioupv6yil" path="res://audio/MainGame/slime_jump.wav" id="3_svyn2"]
[ext_resource type="AudioStream" uid="uid://wuufmrhr1aaw" path="res://audio/StartScreen/日本群星 - GREEN GREENS (星のカービィ)_L.ogg" id="4_0nplc"]
[ext_resource type="AudioStream" uid="uid://dquk13c3seixm" path="res://audio/MainGame/slime_step_1.ogg" id="4_jww26"]

[sub_resource type="AtlasTexture" id="AtlasTexture_41jxu"]
atlas = ExtResource("2_4x1nq")
region = Rect2(0, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17d6"]
atlas = ExtResource("2_4x1nq")
region = Rect2(32, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a8ne"]
atlas = ExtResource("2_4x1nq")
region = Rect2(64, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwo8f"]
atlas = ExtResource("2_4x1nq")
region = Rect2(96, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yom0"]
atlas = ExtResource("2_4x1nq")
region = Rect2(128, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mrp3"]
atlas = ExtResource("2_4x1nq")
region = Rect2(160, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1k3s"]
atlas = ExtResource("2_4x1nq")
region = Rect2(192, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbu3x"]
atlas = ExtResource("2_4x1nq")
region = Rect2(224, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7amb"]
atlas = ExtResource("2_4x1nq")
region = Rect2(256, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjoxm"]
atlas = ExtResource("2_4x1nq")
region = Rect2(288, 390, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqtsi"]
atlas = ExtResource("2_4x1nq")
region = Rect2(0, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_4x1nq"]
atlas = ExtResource("2_4x1nq")
region = Rect2(32, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_65gh0"]
atlas = ExtResource("2_4x1nq")
region = Rect2(64, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fflp"]
atlas = ExtResource("2_4x1nq")
region = Rect2(96, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow8vp"]
atlas = ExtResource("2_4x1nq")
region = Rect2(128, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgrc4"]
atlas = ExtResource("2_4x1nq")
region = Rect2(160, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp5qy"]
atlas = ExtResource("2_4x1nq")
region = Rect2(192, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvl61"]
atlas = ExtResource("2_4x1nq")
region = Rect2(224, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekpm5"]
atlas = ExtResource("2_4x1nq")
region = Rect2(256, 359, 32, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_clfb5"]
atlas = ExtResource("2_4x1nq")
region = Rect2(288, 359, 32, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_0a8ne"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_41jxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0a8ne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwo8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yom0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mrp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1k3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbu3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7amb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjoxm")
}],
"loop": true,
"name": &"snakes",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqtsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4x1nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65gh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fflp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow8vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgrc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp5qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvl61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekpm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clfb5")
}],
"loop": true,
"name": &"snakes2",
"speed": 5.0
}]

[node name="StartScreen" type="Control" node_paths=PackedStringArray("start_button", "settings_button", "quit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vdfby")
start_button = NodePath("MenuContainer/StartButton")
settings_button = NodePath("MenuContainer/SettingButton")
quit_button = NodePath("MenuContainer/QuitButton")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.9019608, 0.9019608, 0.27450982, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 420.0
offset_top = 95.0
offset_right = 692.0
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.97360384, 0.24780053, 0, 1)
theme_override_font_sizes/font_size = 80
text = "贪吃蛇大战"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_top = 425.0
offset_right = 252.0
offset_bottom = 623.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="StartButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "开始游戏"

[node name="SettingButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "设置"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "退出"

[node name="SnakesAnimated" type="AnimatedSprite2D" parent="."]
position = Vector2(200.00002, 485.00003)
scale = Vector2(15, 15)
sprite_frames = SubResource("SpriteFrames_0a8ne")
animation = &"snakes"

[node name="SnakeJumpAudio" type="AudioStreamPlayer2D" parent="SnakesAnimated"]
stream = ExtResource("3_svyn2")

[node name="SnakeStepAudio" type="AudioStreamPlayer2D" parent="SnakesAnimated"]
stream = ExtResource("4_jww26")

[node name="SelectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_4x1nq")
volume_db = 4.0

[node name="ThemeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0nplc")
